fix: padding on mobile

--- a/index.css
+++ b/index.css
@@ -12,7 +12,12 @@ main {
   padding-top: 50px;
   max-width: 600px;
   margin: 0 auto;
-  padding: 0 20px;
+}
+
+@media (max-width: 600px) {
+  main {
+    padding: 20px;
+  }
 }
 
 .ul-main {
